--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,9 @@
             </div>
             <!-- Chats List -->
             <div id="chatsTab" class="tab-content">
+              <div class="search-box" style="display:flex;gap:8px;">
+                <input type="text" id="userSearchInput" placeholder="Search users..." style="flex:1;padding:8px;border:1px solid #ddd;border-radius:4px;">
+              </div>
               <ul id="chatsList" class="list">
                 <li class="list-empty">No chats yet. Select a user to start chatting!</li>
               </ul>
