Fix Cloudinary upload and playback issues
- Add Cloudinary configuration to .env.example
- Enhance cloudinaryStorage.js with video optimization options
- Fix reelProcessor.js to handle Cloudinary URLs properly
- Add crossOrigin and resolveMediaSrc for video elements
- Add capture attribute for mobile camera access
- Improve error handling for uploads

--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
                   </svg>
                   <span>Add Story</span>
                 </label>
-                <input type="file" id="storyUpload" accept="image/*,video/*" style="display:none" multiple />
+                <input type="file" id="storyUpload" accept="image/*,video/*" style="display:none" multiple capture="environment" />
                 <input type="text" id="storyCaption" placeholder="Caption..." class="story-caption-input" />
               </div>
               <!-- Highlights Section -->
