Additional frontend updates

--- a/public/index.html
+++ b/public/index.html
@@ -525,6 +525,10 @@
                 <div class="avatar large" id="callAvatar">U</div>
                 <h3 id="callUsername">Username</h3>
                 <p id="callStatus">Calling...</p>
+                <div id="incomingCallActions" class="hidden" style="display:flex;gap:10px;justify-content:center;margin-top:12px;">
+                  <button id="acceptCallBtn" type="button" class="btn btn-primary">Accept</button>
+                  <button id="rejectCallBtn" type="button" class="btn btn-secondary">Decline</button>
+                </div>
               </div>
               <button id="endCallBtn" class="end-call-btn">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
