--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="theme-color" content="#128c7e" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -12,7 +12,7 @@
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/styles.css?v=9" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -248,6 +248,7 @@
                   </svg>
                 </button>
               </div>
+              <div id="searchResults" class="search-results"></div>
             </div>
             
             <!-- Pinned Message -->
@@ -518,8 +519,8 @@
           <div id="callModal" class="call-modal hidden">
             <div class="call-container">
               <div class="call-video">
-                <video id="localVideo" autoplay muted playsinline></video>
-                <video id="remoteVideo" autoplay playsinline></video>
+                <video id="localVideo" autoplay muted playsinline webkit-playsinline disablepictureinpicture controlslist="noremoteplayback"></video>
+                <video id="remoteVideo" autoplay playsinline webkit-playsinline disablepictureinpicture controlslist="noremoteplayback"></video>
               </div>
               <div class="call-info">
                 <div class="avatar large" id="callAvatar">U</div>
@@ -541,7 +542,7 @@
 
           <!-- Stories Viewer Modal -->
           <div id="storyModal" class="story-modal hidden">
-            <div class="story-viewer">
+            <div id="story-viewer" class="story-viewer">
               <div class="story-progress">
                 <div class="progress-bar" id="storyProgress"></div>
               </div>
@@ -564,7 +565,7 @@
                 <div style="width:100%;height:100%;display:flex;align-items:center;justify-content:center;">
                   <button id="storyPrevBtn" type="button" class="action-btn" style="position:absolute;left:14px;top:50%;transform:translateY(-50%);z-index:10;">‹</button>
                   <img id="storyImage" src="" alt="Story" style="display:none;width:100%;height:100%;object-fit:contain;" />
-                  <video id="storyVideo" src="" style="display:none;width:100%;height:100%;object-fit:contain;" playsinline></video>
+                  <video id="storyVideo" src="" style="display:none;width:100%;height:100%;object-fit:contain;" playsinline webkit-playsinline disablepictureinpicture controlslist="nofullscreen noremoteplayback"></video>
                   <button id="storyNextBtn" type="button" class="action-btn" style="position:absolute;right:14px;top:50%;transform:translateY(-50%);z-index:10;">›</button>
                 </div>
               </div>
@@ -617,6 +618,14 @@
       </div>
     </section>
 
+    <div id="installBanner" class="install-banner hidden">
+      <div class="install-banner-text" id="installBannerText">Install Social Hub on your phone for full-screen access.</div>
+      <div class="install-banner-actions">
+        <button id="installAppBtn" type="button" class="btn btn-primary">Install</button>
+        <button id="dismissInstallBtn" type="button" class="btn btn-secondary">Not now</button>
+      </div>
+    </div>
+
     <script src="/socket.io/socket.io.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
@@ -627,6 +636,6 @@
         });
       }
     </script>
-    <script src="/app.js"></script>
+    <script src="/app.js?v=9"></script>
   </body>
 </html>
