--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
-    <link rel="stylesheet" href="/styles.css?v=10" />
+    <link rel="stylesheet" href="/styles.css?v=11" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -565,7 +565,7 @@
                 <div style="width:100%;height:100%;display:flex;align-items:center;justify-content:center;">
                   <button id="storyPrevBtn" type="button" class="action-btn" style="position:absolute;left:14px;top:50%;transform:translateY(-50%);z-index:10;">‹</button>
                   <img id="storyImage" src="" alt="Story" style="display:none;width:100%;height:100%;object-fit:contain;" />
-                  <video id="storyVideo" src="" style="display:none;width:100%;height:100%;object-fit:contain;" playsinline webkit-playsinline disablepictureinpicture controlslist="nofullscreen noremoteplayback"></video>
+                  <video id="storyVideo" src="" style="display:none;width:100%;height:100%;object-fit:contain;" autoplay muted playsinline webkit-playsinline disablepictureinpicture controlslist="nofullscreen noremoteplayback nodownload"></video>
                   <button id="storyNextBtn" type="button" class="action-btn" style="position:absolute;right:14px;top:50%;transform:translateY(-50%);z-index:10;">›</button>
                 </div>
               </div>
@@ -636,6 +636,6 @@
         });
       }
     </script>
-    <script src="/app.js?v=10"></script>
+    <script src="/app.js?v=11"></script>
   </body>
 </html>
